--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -28,7 +28,7 @@
     </string-array>
 
     <string-array name="theme_select">
-        <item>DEFAULT</item>
+        <item>DEFAULT (System)</item>
         <item>Dark</item>
         <item>Light</item>
 
